--- a/src/Button.css
+++ b/src/Button.css
@@ -161,8 +161,11 @@ font-style: normal;
     right: 310px;
     left: auto;
     top: -5px;
-    width: 13%;
-    height: 190%;
+    width: 32%;
+    height: 195%;
+  }
+  h2{
+    font-size: 112%;
   }
 
 }
